# clientcraft

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_error_handling.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api-reference.md  async.md  backends.md  custom-backends.md  endpoints.md  error-handling.md  how-it-works.md  index.md  installation.md  parameterless-endpoints.md  quickstart.md  requests-responses.md  testing.md
examples/: README.md  basic_usage.py  error_handling.py  testing_your_app.py  testing_your_client.py
src/clientcraft/: __init__.py  __init__.pyi  _base.py  _endpoints.py  _responses.py  _types.py  async_client.py  client.py  testing.py
src/clientcraft/backends/: __init__.py  _protocols.py  aiohttp.py  httpx.py  requests.py  urllib.py
tests/: __init__.py  conftest.py  test_async.py  test_client.py  test_endpoints.py  test_error_handling.py  test_no_param_endpoint.py  test_parse_response.py  test_prepare_request.py  test_responses.py  test_testing.py
tests/backends/: __init__.py  conftest.py  test_aiohttp.py  test_httpx.py  test_integration.py  test_requests.py  test_urllib.py
