[project]
name = "clientcraft"
dynamic = ["version"]
description = "A declarative, type-safe API client framework for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "SunBright Technologies", email = "engineering@sunbright.tech" }
]
keywords = ["api", "async", "client", "http", "declarative", "type-safe", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9"]
httpx = ["httpx>=0.27"]
requests = ["requests>=2.32.5", "types-requests>=2.32.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "aiohttp>=3.9",
    "requests>=2.32.5",
    "types-requests>=2.32.5",
    "httpx>=0.28.1",
]
all = [
    "clientcraft[aiohttp]",
    "clientcraft[httpx]",
    "clientcraft[requests]",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/Sunbright-Technologies/clientcraft"
Repository = "https://github.com/Sunbright-Technologies/clientcraft"
Documentation = "https://sunbright-technologies.github.io/clientcraft/"
Changelog = "https://github.com/Sunbright-Technologies/clientcraft/releases"
Issues = "https://github.com/Sunbright-Technologies/clientcraft/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/clientcraft"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "aiohttp>=3.9",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=16.1",
    "hatch-vcs>=0.5.0",
    "requests>=2.32.5",
    "types-requests>=2.32.5",
    "httpx>=0.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "RUF022",  # Allow unsorted __all__ (we organize by category with comments)
]

[tool.ruff.lint.isort]
known-first-party = ["clientcraft"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/clientcraft", "tests"]

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
